--- a/site/.env
+++ b/site/.env
@@ -1,1 +1,1 @@
-PRISMIC_REPOSITORY_NAME=https://YOUR_REPO_NAME_HERE.prismic.io/api/v2
+PRISMIC_REPOSITORY_NAME=https://eleventy-soft-ui-design.prismic.io/api/v2
