--- a/site/.gitignore
+++ b/site/.gitignore
@@ -1,7 +1,3 @@
-node_modules
-dist
-build
-_site/css/*.css
-_site/css/*.css.map
-_site/js/script.js
-.vscode/
+_site/
+node_modules/
+package-lock.json
