--- a/site/src/admin/config.yml
+++ b/site/src/admin/config.yml
@@ -115,26 +115,26 @@ collections:
               - { label: "Order", name: "order", widget: "number", default: 0 }
 
       # Blog Page
-      # - label: "Blog Page"
-      #   name: "blog"
-      #   file: "src/pages/blog.md"
-      #   fields:
-      #     - { label: "Title", name: "title", widget: "string" }
-      #     - { label: "Body", name: "body", widget: "markdown", required: false }
-      #     - {
-      #         label: "Meta Description",
-      #         name: "metaDescription",
-      #         widget: "text",
-      #         required: false,
-      #       }
-      #     - { label: "Publish Date", name: "date", widget: "datetime" }
-      #     - { label: "Permalink", name: "permalink", widget: "string" }
-      #     - label: "Navigation" # https://www.11ty.dev/docs/plugins/navigation/
-      #       name: "eleventyNavigation"
-      #       widget: "object"
-      #       fields:
-      #         - { label: "Key", name: "key", widget: "string" }
-      #         - { label: "Order", name: "order", widget: "number", default: 0 }
+      - label: "Blog Page"
+        name: "blog"
+        file: "src/pages/blog.md"
+        fields:
+          - { label: "Title", name: "title", widget: "string" }
+          - { label: "Body", name: "body", widget: "markdown", required: false }
+          - {
+              label: "Meta Description",
+              name: "metaDescription",
+              widget: "text",
+              required: false,
+            }
+          - { label: "Publish Date", name: "date", widget: "datetime" }
+          - { label: "Permalink", name: "permalink", widget: "string" }
+          - label: "Navigation" # https://www.11ty.dev/docs/plugins/navigation/
+            name: "eleventyNavigation"
+            widget: "object"
+            fields:
+              - { label: "Key", name: "key", widget: "string" }
+              - { label: "Order", name: "order", widget: "number", default: 0 }
 
       # Projects Page
       - label: "Projects Page"
